--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "4.0.2",
     "sass": "^1.45.2",
+    "scss": "^0.2.4",
     "swiper": "^6.8.4",
     "web-vitals": "^2.1.2"
   },
