--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,9 +22,9 @@ jobs:
           npm run build
 
       - name: 📂 Sync files
-        uses: ./
+        uses: SamKirkland/FTP-Deploy-Action@4.2.0
         with:
           server: ${{ secrets.ftp_server }}
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_password }}
-          protocol: ftps
+          port: ${{ secrets.ftp_port }}
