--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - main
+      - master
 name: 🚀 Deploy website on push
 jobs:
   web-deploy:
@@ -28,4 +28,3 @@ jobs:
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_password }}
           port: ${{ secrets.ftp_port }}
-          command_timeout: 200m
