--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,3 +28,5 @@ jobs:
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_password }}
           port: ${{ secrets.ftp_port }}
+          dangerous-clean-slate: true
+          local-dir: ./build/
