--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           npm install
           npm run build
+          npm run test
 
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.2.0
@@ -28,5 +29,4 @@ jobs:
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_password }}
           port: ${{ secrets.ftp_port }}
-          dangerous-clean-slate: true
           local-dir: ./build/
