--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://kromah.github.io/frontend",
   "name": "logapea",
   "version": "0.1.0",
   "private": true,
