--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,4 +28,4 @@ jobs:
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_password }}
           port: ${{ secrets.ftp_port }}
-          local-dir: ./build/
+          server-dir: /home/logapeac1/build/
