--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kromah.github.io/frontend",
+  "homepage": "https://www.logapea.com/build",
   "name": "logapea",
   "version": "0.1.0",
   "private": true,
