--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,4 +28,6 @@ jobs:
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_password }}
           port: ${{ secrets.ftp_port }}
-          server-dir: /home/logapeac1/build/
+          server-dir: public_html/
+          timeout_minutes: 1
+          max_attempts: 3
